tests/NormalTests/paczka1/fuzzy1/28313797.err
Error in line 1: ofn1mQih S539 74,3
Error in line 8: sAGDAW3 A144 10,4
Error in line 16: sAGDAW3 S96 6,3
Error in line 17: sAGDAW3 A144 55,9
